fix : working on movable guarantees

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         },
         "files": [
             "app/Helpers/helpers.php",
-            "app/Helpers/media.php"
+            "app/Helpers/media.php",
+            "app/Constants/Constants.php"
         ]
     },
     "autoload-dev": {
