--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -30,7 +31,8 @@
         "files": [
             "app/Helpers/helpers.php",
             "app/Helpers/media.php",
-            "app/Constants/Constants.php"
+            "app/Constants/Constants.php",
+            "app/Helpers/helpers.php"
         ]
     },
     "autoload-dev": {
