feat : ldap auth feature implemented

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,17 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+LDAP_HOST=127.0.0.1
+LDAP_CACHE=false
+LDAP_LOGGING=true
+LDAP_CONNECTION=default
+LDAP_USERNAME="cn=admin,dc=localhost"
+LDAP_PASSWORD=massigbe
+LDAP_PORT=389
+LDAP_BASE_DN="dc=localhost"
+LDAP_TIMEOUT=5
+LDAP_SSL=false
+LDAP_TLS=false
+LDAP_SASL=false
