--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "rmunate/spell-number": "^4.2",
         "spatie/laravel-permission": "^6.7",
         "twilio/sdk": "^8.2"
     },
