--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,15 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "larastan/larastan": "^2.0",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0",
-        "tightenco/duster": "^3.0"
+        "tightenco/duster": "^3.0",
+        "tightenco/tlint": "^9.3"
     },
     "autoload": {
         "psr-4": {
