--- a/.github/workflows/duster-lint.yml
+++ b/.github/workflows/duster-lint.yml
@@ -1,20 +1,30 @@
-name: Duster Lint
+name: Duster CI
 
 on:
-    push:
-        branches: [ main ]
-    pull_request:
+  push:
+    branches:
+      - main
+      - dev
+  pull_request:
+    branches:
+      - main
+      - dev
 
 jobs:
-  duster:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install PHP
+        uses: shivammathur/setup-php@v2
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-      - name: "Duster Lint"
-        uses: tighten/duster-action@v3
-        with:
-          args: lint
+          php-version: '8.1'
+
+      - name: Install dependencies
+        run: composer install
+
+      - name: Run Duster Lint
+        run: php vendor/bin/duster lint
